<?xml version="1.0"?>
<package format="3">
  <name>sbg_driver</name>
  <version>3.1.0</version>
  <description>
    ROS driver package for communication with the SBG navigation systems.
  </description>
  <author>SBG Systems</author>
  <maintainer email="support@sbg-systems.com">SBG Systems</maintainer>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/sbg_driver</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>rtcm_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nmea_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
